--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,8 @@
 # GHL API Configuration
 GHL_API_KEY=your_ghl_api_key_here
 GHL_LOCATION_ID=your_location_id_here
+GHL_CALENDAR_ID=your_calendar_id_here
+GHL_CONTACT_ID=your_contact_id_here
 GHL_ASSIGNED_USER_ID=your_assigned_user_id_here
 GHL_API_VERSION=2021-04-15
 
